--- a/index.html
+++ b/index.html
@@ -2,74 +2,220 @@
 <html lang="en">
 
 <head>
-    <title>Javascript</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;500;600;800&display=swap" rel="stylesheet">
-    <script src="myscript.js"></script>
-    <script>
-        function validateForm() {
-            var nrp = document.getElementById("nrp");
-            var msg = document.getElementById("msg");
-            //cek hanya yang invalid
+  <meta charset="UTF-8">
+  <meta content="width=device-width,initial-scale=1" name="viewport">
 
-            if (nrp.value == "") {
-                nrp.focus();
-                nrp.placeholder = "contoh : 5026221119"
-                alert("NRP harus diisi")
-                return false;
-            }
+  <!-- Disable tap highlight on IE -->
+    
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
+  <link href="./assets/favicon.ico" rel="icon">
 
-            //terdapat abjad a-z = invalid
-            if(isNaN(nrp.value)==true){ //True jika ada unsur abjad, false jika angka semua
-                nrp.focus();
-                alert("NRP harus angka")
-                return false;
-            }
+  <title><Satria>hello world!</title>  
+  <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
-            //harus 10 digit
-            if (nrp.value.length != 10) {
+<body class="minimal">
 
-                nrp.focus();
-                msg.innerHTML = "NRP harus 10 digit, anda memasukkan " + nrp.value.length + " digit";
-                return false;
-            }
-        }
-    </script>
-</head>
-
-<body>
+<!-- Add your content of header -->
+<header>
+  <nav class="navbar  navbar-fixed-top navbar-inverse">
     <div class="container">
-        <div class="jumbotron">Form validasi adalah mencegah pengiriman data ke server jika ada yang invalid atau tidak
-            sesuai dengan constraint database</div>
-        <script>
-            function validate() {
-                //Default return value suatu function adalah true
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
 
-                console.log("baris22");
-                return false;
-                console.log("baris24");
-                return true;
-                console.log("baris26");
-                return false;
-            }
-        </script>
-        <form action="https://google.com" method="get" onsubmit="return validateForm();">
-            <div class="form-group">
-                <label for="nrp">NRP :</label>
-                <input type="text" class="form-control" id="nrp"><div id="msg" class="text-danger"></div>
-            </div>
-            <input type="submit" value="DAFTAR" class="btn btn-primary">
-            <input type="reset" value="ULANGI" class="btn btn-warning">
-        </form>
-        </form>
+      <div class="collapse navbar-collapse" id="navbar-collapse">
+        <ul class="nav navbar-nav ">
+          <li><a href="./index.html" title="">01 : Home</a></li>
+          <li><a href="./about.html" title="">02 : About me</a></li>
+          <li><a href="./hobby.html" title="">03 : Hobby</a></li>
+          <li><a href="./contact.html" title="">04 : Contact</a></li>
+          <li><a href="./components.html" title="">05 : Components</a></li>
+        </ul>
+
+
+      </div> 
     </div>
+  </nav>
+</header>
+<!-- Add your site or app content here -->
+  <div class="hero-full-container background-image-container white-text-container" style="background-image: url('./assets/images/bg1.jpg')">
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="hero-full-wrapper">
+            <div class="text-content">
+              <h1>Hello,<br>
+                <span id="typed-strings">
+                  <span>World!</span>
+                  <span>Information Systems!</span>
+                  <span>I'm Satria.</span>
+                </span>
+                <span id="typed"></span>
+              </h1>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <br>
+  
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="section-container-spacer text-center">
+          <h1 class="h2">02 : About me</h1>
+        </div>
+        
+        <div class="row">
+          <div class="col-md-10 col-md-offset-1">
+            <div class="row">
+              <div class="col-xs-12 col-md-6">
+                <h3>Get to know me!</h3>
+                <p>Hello. My name is Satria Dwi Nugraha. I come from the city of Mojokerto. I am the youngest of 2 brothers. I am a person who likes to explore what is around me</p>
+                <br>
+                <h3>Keywords that suit me</h3>
+                <p>independent, happy, adaptive, sensitive, introvert, geek, explorer, catlovers, idealistic, empathetic, movies, music, rains, moon, feeling, actofservices, anxiety, intuition, self-care, dynamics, nature, photography, soft spoken, daydreamer, tolerant, mindful, gentle, humble, space</p>
+                <br>
+                <h3>Quote that motivates me</h3>
+                <p>"Happiness comes when you believe in what you are doing, know what you are doing, and love what you are doing." - Brian Tracy</p>
+              </div>
+              <div class="col-xs-12 col-md-6">
+                <img src="./assets/images/profil.jpg" class="img-responsive" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <br>
+  <br>
+  <h3 class="text-center small">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</h3>
+  <br>
+
+  <div class="container">
+    <div class="row">
+
+      <div class="col-sm-8 col-sm-offset-2 section-container-spacer">
+        <div class="text-center">
+          <h1 class="h2">03 : Hobby</h1>
+          <p><b>photography[fuh-tog-ruh-fee]</b> ; the process or art of producing images of objects on sensitized
+            surfaces by the chemical action of light or of other forms of radiant energy, as x-rays, gamma rays, or
+            cosmic rays. I'd like to taking photos of something that attract me to enshrine it</p>
+          <br>
+          <h1 class="h2">My Photograph</h1>
+        </div>
+      </div>
+
+      <div class="col-md-12">
+
+        <div id="myCarousel" class="carousel slide">
+          <!-- Carousel items -->
+          <div class="carousel-inner">
+            <div class="carousel item active">
+              <div class="row">
+                <!--/row-->
+                <div class="col-sm-4">
+                  <a href="./photo1.html" title="" class="black-image-project-hover">
+                    <img src="./assets/images/photo1.jpg" alt="" class="img-responsive">
+                  </a>
+                  <div class="card-container card-container-lg">
+                    <h4>001/006</h4>
+                    <h3>The Float</h3>
+                    <p>Capturing the world from beneath the iconic Marina Bay Sands Infinity Pool. A mesmerizing view that defies gravity.</p>
+                    <a href="./photo1.html" title="" class="btn btn-default">Discover</a>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <a href="./photo2.html" title="" class="black-image-project-hover">
+                    <img src="./assets/images/photo2.jpg" alt="" class="img-responsive">
+                  </a>
+                  <div class="card-container card-container-lg">
+                    <h4>002/006</h4>
+                    <h3>Rush Hour</h3>
+                    <p>Savoring serenity amidst the hustle and bustle of Surabaya's famous mall during rush hour.</p>
+                    <a href="./photo2.html" title="" class="btn btn-default">Discover</a>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <a href="./photo3.html" title="" class="black-image-project-hover">
+                    <img src="./assets/images/photo3.jpg" alt="" class="img-responsive">
+                  </a>
+                  <div class="card-container card-container-lg">
+                    <h4>003/006</h4>
+                    <h3>Night Lights</h3>
+                    <p>A mesmerizing view of the cityscape, like a sea of stars, from high above the tranquil hills.</p>
+                    <a href="./photo3.html" title="" class="btn btn-default">Discover</a>
+                  </div>
+                </div>
+              <!--/row-->
+              </div>           
+            </div>
+            <!--/item-->
+            <div class="item">
+              <div class="row">
+                <div class="col-sm-4">
+                  <a href="./photo5.html" class="black-image-project-hover">
+                    <img src="./assets/images/photo4.jpg" alt="Image" class="img-responsive">
+                  </a>
+                  <div class="card-container">
+                    <h4>004/006</h4>
+                    <h3>Cat</h3>
+                    <p>Meet the newest 'IT' expert in our department - our fluffy white feline friend.</p>
+                    <a href="./photo4.html" class="btn btn-default">Discover</a>
+                  </div>
+                </div>
+                <div class="col-sm-4">
+                  <a href="./photo5.html" class="black-image-project-hover">
+                    <img src="./assets/images/photo5.jpg" alt="Image" class="img-responsive">
+                  </a>
+                  <div class="card-container">
+                    <h4>005/006</h4>
+                    <h3>Traffic</h3>
+                    <p>The crisscrossing streams of vehicles, breathing metropolis, paint a fascinating tapestry of motion and life.</p>
+                    <a href="./photo5.html" class="btn btn-default">Discover</a>
+                  </div>
+                </div>
+
+                <div class="col-sm-4">
+                  <a href="./photo6.html" class="black-image-project-hover">
+                    <img src="./assets/images/photo6.jpg" alt="Image" class="img-responsive">
+                  </a>
+                  <div class="card-container">
+                    <h4>006/006</h4>
+                    <h3>Birdie</h3>
+                    <p>Amidst the hustle and bustle of the concrete jungle, a solitary bird finds its own path.</p>
+                    <a href="./photo6.html" class="btn btn-default">Discover</a>
+                  </div>
+                </div>
+
+              </div>
+              <!--/row-->
+            </div>
+
+            <!--/item-->
+          </div>
+          <!--/carousel-inner-->
+          <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lt;</a>
+          <a class="right carousel-control" href="#myCarousel" data-slide="next">&gt;</a>
+        </div>
+        <!--/myCarousel-->
+      </div>
+
+
+
+      <script type="text/javascript" src="./main.js"></script>
+
+
+
+    </div>
+  </div>  
 </body>
 
 </html>
