--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
           
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
-               <form action="https://formsubmit.co/el/pupefa" method="POST">
+               <form action="https://formsubmit.co/nugrahasatria05@gmail.com" method="POST">
                   <div class="row">
                     <h3 class="col-lg-10">Leave a message</h3>
                     <div class="col-md-7">
