--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   <link href="./assets/favicon.ico" rel="icon">
   <title>myself. satria dwi nugraha</title>  
   <link href="style.css" rel="stylesheet">
-  <form action="https://formsubmit.co/your@email.com" method="POST" />
+  <form action="https://formsubmit.co/nugrahasatria05@gmail.com" method="POST" />
 
 </head>
 
