--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,6 @@
   <link href="./assets/favicon.ico" rel="icon">
   <title>myself. satria dwi nugraha</title>  
   <link href="style.css" rel="stylesheet">
-  <form action="https://formsubmit.co/nugrahasatria05@gmail.com" method="POST" />
-
 </head>
 
 <body class="">
@@ -42,7 +40,7 @@
           
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
-               <form action="https://formsubmit.co/nugrahasatria05@gmail.com" method="POST">
+               <form action="https://formsubmit.co/el/pupefa" method="POST">
                   <div class="row">
                     <h3 class="col-lg-10">Leave a message</h3>
                     <div class="col-md-7">
