--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
           
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
-               <form action="" class="reveal-content">
+               <form action="https://formsubmit.co/3e76b2f4daf2d14fdbeb50a430a2caaf" method="POST">
                   <div class="row">
                     <h3 class="col-lg-10">Leave a message :</h3>
                     <div class="col-md-7">
